# eosdac-contracts

./: .clang-format  .eslintrc.js  .gitignore  .gitmodules  .lamingtonrc  =3.0.0  CMakeLists.txt  Doxyfile  EOSDAC Errors.xlsx  EXTENDING.md  Gemfile  LoggingConfig.ts  README.md  RELEASES.md  Scope migration  TestHelpers.ts  config.cpp  contract_vars  daccustodian.abi  daccustodian.contracts.md  daccustodian.cpp  daccustodian.hpp  daccustodian.wasm  daccustodian.wast  daccustodian_types.hpp  daccustodian_voting_disabled.wast  daccustodianold.abi  dacdirectory.cpp  dacdirectory.hpp  dacdirectory_shared.hpp  dacescrow.contracts.md  dacescrow.cpp  dacescrow.hpp  dacescrow_shared.hpp  dacmultisigs.abi  dacmultisigs.cpp  dacmultisigs.hpp  dacmultisigs.wast  dacproposals.abi  dacproposals.contracts.md  (+28 more)
_contract-shared-headers/: common_utilities.hpp  daccustodian_shared.hpp  (+5 more)
daccustodian/: CMakeLists.txt  README.md  compile.sh  config.cpp  daccustodian.contracts.md  daccustodian.cpp  daccustodian.hpp  daccustodian.test.ts  daccustodian.ts  debug.cpp  eosdactokens_types.hpp  external_observable_actions.cpp  external_types.hpp  migration.cpp  newperiod_components.cpp  notifications.cpp  pay_handling.cpp  paycpu.cpp  privatehelpers.cpp  registering.cpp  ricardian2.txt  update_member_details.cpp  voting.cpp
daccustodian/output/mainnet_votingdisabled/daccustodian/: daccustodian.wasm
daccustodian/output/mainnet_votingenabled/: compile.sh
daccustodian/output/mainnet_votingenabled/daccustodian/: daccustodian.wasm
daccustodian/tests/: contract_spec.rb  contract_spec_migration.rb
(+1785 files in other folders)
